--- a/communicator.styl
+++ b/communicator.styl
@@ -7,5 +7,16 @@ body
 main
     flex 1 0 auto
 
+.about
+    min-height 0px
+
 .messageContainer
     min-height 80%
+
+.controls
+    max-height 100px
+    position fixed
+    bottom -4%
+    padding 0px
+    margin 0px
+    z-index 1
