--- a/client/views/about.html
+++ b/client/views/about.html
@@ -1,7 +1,6 @@
 <template name="about">
     <div class="container">
-        <div class="row">
-            <h6 class="right grey-text text-lighten-3">1480 Olympic Street, Simi Valley CA 93063 <i class="mdi-social-location-city"></i></h6>
+        <div class="row about">
         </div>
     </div>
 </template>
